# lib/db/src/schema/dinosaurs.ts
@@ -1,4 +1,4 @@
-import { pgTable, serial, text, timestamp } from "drizzle-orm/pg-core";
+import { integer, pgTable, serial, text, timestamp } from "drizzle-orm/pg-core";
 import { createInsertSchema } from "drizzle-zod";
 import { z } from "zod/v4";
 
@@ -9,6 +9,7 @@ export const dinosaursTable = pgTable("dinosaurs", {
   period: text("period").notNull().default("Unknown"),
   diet: text("diet").notNull().default("Unknown"),
   imageUrl: text("image_url"),
+  likesCount: integer("likes_count").notNull().default(0),
   createdAt: timestamp("created_at").defaultNow().notNull(),
   updatedAt: timestamp("updated_at").defaultNow().notNull(),
 });
@@ -17,6 +18,7 @@ export const insertDinosaurSchema = createInsertSchema(dinosaursTable).omit({
   id: true,
   createdAt: true,
   updatedAt: true,
+  likesCount: true,
 });
 
 export type InsertDinosaur = z.infer<typeof insertDinosaurSchema>;
